--- a/homework-1/index.html
+++ b/homework-1/index.html
@@ -6,15 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <nav>
-            <li>lifestyle</li>
-            <li>photodiary</li>
-            <li>musik</li>
-            <li>travel</li>
+    <header class="header">
+    <div class="container">
+        <nav class="navigation">
+            <ul class="menu">
+            <li class="menu_item"><a href="#" class="menu_item_link">lifestyle</a></li>
+            <li class="menu_item"><a href="#" class="menu_item_link">photodiary</a></li>
+            <li class="menu_item"><a href="#" class="menu_item_link">musik</a> </li>
+            <li class="menu_item"><a href="#" class="menu_item_link"> travel</a> </li>
+            </ul>
         </nav>
     </div>
-    <div class="box">
+    </header>
+    <main class="main">
+<div class="box">
         <img src="./images/image.png" alt="images">
         <h3>
             lifestyle
@@ -45,9 +50,7 @@ More than just musik fetival
         <h3>
             photodiar
         </h3>
-        <h2>
-            American dream
-        </h2>
+        <h2>American dream</h2>
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci id molestiae libero nostrum magni atque
                  minima, dicta rem, ab assumenda accusamus, cum debitis ex eveniet? Molestiae harum illo consequuntur tempora.
@@ -67,3 +70,6 @@ More than just musik fetival
     </p>
     </div>
     <button>learn More</button>
+    </main>
+   </body>
+  </html>
