--- a/homework-6/index.html
+++ b/homework-6/index.html
@@ -11,23 +11,23 @@
             <div class="container">
               <nav class="navigation">
                 <div class="logo-box">
-                  <a href="#" class="logo">MoGo</a>
+                  <a href="#" class="logo">Golden</a>
                 </div>
                 <ul class="menu">
                   <li class="menu-item">
-                    <a href="#" class="menu-item__link">About</a>
+                    <a href="#" class="menu-item__link">HOME</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#" class="menu-item__link">Servises</a>
+                    <a href="#" class="menu-item__link">SERVISES</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#" class="menu-item__link">Work</a>
+                    <a href="#" class="menu-item__link">PORTFOLIO</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#" class="menu-item__link">Blog</a>
+                    <a href="#" class="menu-item__link">ABOUT</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#" class="menu-item__link">Contact</a>
+                    <a href="#" class="menu-item__link">CONTACT</a>
                   </li>
                 </ul>
               </nav>
@@ -36,15 +36,15 @@
         <main class="main">
             <section class="services">
               <div class="box-title_1">
-                <p class="title-1">We wokr whith</p>
-                <h1 class="title-2">AMAZING SERVICES</h1>
+                <p class="title-1">SERVICES</p>
+                <h1 class="title-2">Proin iaculis purus consequat sem cure </h1>
               </div>
             
                   <div class="serv-section">
 
                     <div class="serv-container">
-                      <div class="img-container"> <img class="img-s-1" src="./images/basket.png" alt="basket">
-                          <img class="img-s-2" src="./images/circle.png" alt="circle"></div>
+                      <div class="img-container"> <img class="img-s-2" src="./images/basket.png" alt="basket">
+                          </div>
                       <h2 class="serv-title">E-commerce</h2>
                       <p class="serv-text">Proin iaculis purus consequat sem cure 
                        digni ssim. Donec porttitora entum suscipit 
@@ -52,18 +52,18 @@
                      </div>
    
                    <div class="serv-container">
-                      <div class="img-container"> <img class="img-s-1" src="./images/basket.png" alt="basket">
-                          <img class="img-s-2" src="./images/circle.png" alt="circle"></div>
-                      <h2 class="serv-title">E-commerce</h2>
+                      <div class="img-container"> <img class="img-s-2" src="./images/pc.png" alt="basket">
+                          <!-- <img class="img-s-2" src="./images/circle.png" alt="circle"> --></div>
+                      <h2 class="serv-title">Responsive Web</h2>
                       <p class="serv-text">Proin iaculis purus consequat sem cure 
                        digni ssim. Donec porttitora entum suscipit 
                        aenean rhoncus posuere odio in tincidunt.</p>
                      </div>
    
                    <div class="serv-container">
-                      <div class="img-container"> <img class="img-s-1" src="./images/basket.png" alt="basket">
-                          <img class="img-s-2" src="./images/circle.png" alt="circle"></div>
-                      <h2 class="serv-title">E-commerce</h2>
+                      <div class="img-container"> <img class="img-s-2" src="./images/lock.png" alt="basket">
+                          <!-- <img class="img-s-2" src="./images/circle.png" alt="circle"> --></div>
+                      <h2 class="serv-title">Web Security</h2>
                       <p class="serv-text">Proin iaculis purus consequat sem cure 
                        digni ssim. Donec porttitora entum suscipit 
                        aenean rhoncus posuere odio in tincidunt.</p>
@@ -75,8 +75,25 @@
         </main>
         <footer class="footer">
            <section class="footer-s">
-               <div class="footer-container">
-                   
+                   <div class="f-img-c">
+                     <img class="img-map" src="./images/map.png" alt="map">
+                   </div>
+               <div class="footer container">
+                   <form action="#" class="f-form">
+                      <div class="i-c-1-2">
+                        <div class="i-c-1">
+                          <Input class="i-1" type="text" placeholder="your name">
+                          <Input class="i-1" type="text" placeholder="your name">
+                          <Input class="i-1" type="text" placeholder="your name">
+                        </div>
+                        <div class="i-c-2">
+                          <textarea placeholder="massege" class="i-2" cols="30" rows="10"></textarea>
+                        </div>
+                      </div>
+                       <div class="i-c-3">
+                         <input class="i-3" type="submit" value="send message">
+                       </div>
+                   </form>
                </div>
            </section>
         </footer>
