--- a/homewrok-4/index.html
+++ b/homewrok-4/index.html
@@ -36,12 +36,12 @@
   <main class="main">
     <div class="box-title_1">
       <p class="title-1">We wokr whith</p>
-      <h1 class="title-2">AMAZING SERVICES</h1>
+      <h1 class="title-2">amazing services</h1> 
       </div>
       <section class="services">
           <div class="serv-container">
             <div class="service-item_1"> <div class="img-service"> <div class="service-item_top"> <img class="img-service_container"  src="./images/alarm.png" alt="#">
-                <p class="service-title">photography</p> </div> <p class="service-text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p></div></div>
+                <p class="service-title">PHOTOGRAPHY</p> </div> <p class="service-text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p></div></div>
        
               <div class="service-item_1"> <div class="img-service"> <div class="service-item_top"> <img class="img-service_container"  src="./images/LINE GRAPH.png" alt="#">
                 <p class="service-title">WEB DESIGN</p> </div> <p class="service-text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p></div></div>
@@ -55,7 +55,7 @@
               <div class="service-item_1"> <div class="img-service"> <div class="service-item_top"> <img class="img-service_container"  src="./images/HOME.png" alt="#">
                 <p class="service-title">CSS/HML</p> </div> <p class="service-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed </p></div></div>
        
-              <div class="service-item_1"> <div class="img-service"> <div class="service-item_top"> <img class="img-service_container"  src="./images/IMAGE.png" alt="#">
+              <div class="service-item_1"> <div class="img-service"> <div class="service-item_top"> <img class="img-service_container"  src="./images/IMAGE.png   " alt="#">
                 <p class="service-title">DIGITAL</p> </div> <p class="service-text">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p></div></div>
           </div>
       </section>
@@ -91,7 +91,7 @@
   <footer class="footer">
     <div class="footer-container conteiner"></div>
        <div class="footer-d-1">
-        <p class="f-text">© 2016 MoGo free PSD template by <a class="f-text">Laaqiq</a></p>
+        <p class="f-text">© 2016 MoGo free PSD template by <a class="a-text">Laaqiq</a></p>
         <div class="f-element">
             <form action="#" name="auth-form" method="GET" class="u-form">
                 <input type="email" name="user-email" placeholder="Your Email...">
