--- a/homewrok-4/index.html
+++ b/homewrok-4/index.html
@@ -40,7 +40,7 @@
       </div>
       <section class="services">
           <div class="serv-container">
-            <div class="service-item_1"> <div class="img-service"> <div class="service-item_top"> <img class="img-service_container"  src="./images/alarm.png" alt="#">
+            <div class="service-item_1"> <div class="img-service"> <div class="service-item_top"> <img class="img-service_container"  src="./images/ALARM.png" alt="#">
                 <p class="service-title">PHOTOGRAPHY</p> </div> <p class="service-text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p></div></div>
        
               <div class="service-item_1"> <div class="img-service"> <div class="service-item_top"> <img class="img-service_container"  src="./images/LINE GRAPH.png" alt="#">
