--- a/дз-5/index.html
+++ b/дз-5/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework-5</title>
 <link rel="stylesheet" href="./css/style.css">
-
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -22,8 +20,6 @@
 </head>
 
 <body>
-
-
 
     <!-- HEADER -->
     <header class="header">
@@ -60,7 +56,7 @@
                 <h1 class="Amazing_Services">Amazing Services</h1>
                 <div class="service-box">
                     <div class="service-item 1">
-                        <img src="./img/services/icons/PHOTOGRAPHY.jpg" alt="PHOTOGRAPHY" class="img_services">
+                        <img src="./images/ALARM.png" alt="PHOTOGRAPHY" class="img_services">
                         <div class="service-item_p">
                             <p class="services-item_title">Photography</p>
                             <p class="services-item_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -68,7 +64,7 @@
                         </div>
                     </div>
                     <div class="service-item 2">
-                        <img src="./img/services/icons/WEB DESIGN.jpg" alt="WEB DESIGN" class="img_services">
+                        <img src="./images/LINE GRAPH.png" alt="WEB DESIGN" class="img_services">
                         <div class="service-item_p">
                             <p class="services-item_title">Web Design</p>
                             <p class="services-item_text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -76,7 +72,7 @@
                         </div>
                     </div>
                     <div class="service-item 3">
-                        <img src="./img/services/icons/CREATIVITY.jpg" alt="CREATIVITY" class="img_services">
+                        <img src="./images/COMPUTER _ OK.png" alt="CREATIVITY" class="img_services">
                         <div class="service-item_p">
                             <p class="services-item_title">Creativity</p>
                             <p class="services-item_text">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -84,7 +80,7 @@
                         </div>
                     </div>
                     <div class="service-item 4">
-                        <img src="./img/services/icons/SEO.jpg" alt="SEO" class="img_services">
+                        <img src="./images/HOME.png" alt="SEO" class="img_services">
                         <div class="service-item_p">
                             <p class="services-item_title">Seo</p>
                             <p class="services-item_text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -92,7 +88,7 @@
                         </div>
                     </div>
                     <div class="service-item 5">
-                        <img src="./img/services/icons/CSS.HTML.jpg" alt="CSS/HTML" class="img_services">
+                        <img src="./images/BOOK 2.png" alt="CSS/HTML" class="img_services">
                         <div class="service-item_p">
                             <p class="services-item_title">Css/Html</p>
                             <p class="services-item_text">Lorem dolor sit amet, consectetur adipiscing elit, sed do
@@ -100,7 +96,7 @@
                         </div>
                     </div>
                     <div class="service-item 6">
-                        <img src="./img/services/icons/DIGITAL.jpg" alt="DIGITAL" class="img_services">
+                        <img src="./images/IMAGE.png" alt="DIGITAL" class="img_services">
                         <div class="service-item_p">
                             <p class="services-item_title">Digital</p>
                             <p class="services-item_text">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
@@ -130,16 +126,16 @@
                                 <div class="hover-box">
                                     <div class="social-box">
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/facebook 2.png" alt="facebook" class="social-icons facebook">
+                                            <img src="./images/facebook.png" alt="facebook" class="social-icons facebook">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/twitter 2.png" alt="twitter" class="social-icons twitter">
+                                            <img src="./images/twitter.png" alt="twitter" class="social-icons twitter">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/pinterest 2.png" alt="pinterest" class="social-icons pinterest">
+                                            <img src="./images/pinterest.png" alt="pinterest" class="social-icons pinterest">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/instagram 2.png" alt="instagram" class="social-icons instagram">
+                                            <img src="./images/instagram.png" alt="instagram" class="social-icons instagram">
                                         </a>
                                     </div>
                                 </div>
@@ -153,16 +149,16 @@
                                 <div class="hover-box">
                                     <div class="social-box">
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/facebook 2.png" alt="facebook" class="social-icons facebook">
+                                            <img src="./images/facebook.png" alt="facebook" class="social-icons facebook">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/twitter 2.png" alt="twitter" class="social-icons twitter">
+                                            <img src="./images/twitter.png" alt="twitter" class="social-icons twitter">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/pinterest 2.png" alt="pinterest" class="social-icons pinterest">
+                                            <img src="./images/pinterest.png" alt="pinterest" class="social-icons pinterest">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/instagram 2.png" alt="instagram" class="social-icons instagram">
+                                            <img src="./images/instagram.png" alt="instagram" class="social-icons instagram">
                                         </a>
                                     </div>
                                 </div>
@@ -176,16 +172,16 @@
                                 <div class="hover-box">
                                     <div class="social-box">
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/facebook 2.png" alt="facebook" class="social-icons facebook">
+                                            <img src="./images/facebook.png" alt="facebook" class="social-icons facebook">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/twitter 2.png" alt="twitter" class="social-icons twitter">
+                                            <img src="./images/twitter.png" alt="twitter" class="social-icons twitter">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/pinterest 2.png" alt="pinterest" class="social-icons pinterest">
+                                            <img src="./images/pinterest.png" alt="pinterest" class="social-icons pinterest">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/instagram 2.png" alt="instagram" class="social-icons instagram">
+                                            <img src="./images/instagram.png" alt="instagram" class="social-icons instagram">
                                         </a>
                                     </div>
                                 </div>
