--- a/homewrok-4/index.html
+++ b/homewrok-4/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="header">
-      <div class="container">
+      <div class="container"> 
         <nav class="navigation">
           <div class="logo-box">
             <a href="#" class="logo">MoGo</a>
@@ -91,7 +91,7 @@
   <footer class="footer">
     <div class="footer-container conteiner"></div>
        <div class="footer-d-1">
-        <p class="f-text">© 2016 MoGo free PSD template by <a class="a-text">Laaqiq</a></p>
+        <p class="f-text">© 2016 MoGo free PSD template by     <a class="a-text"  href="#"  >Laaqiq</a>     </p>
         <div class="f-element">
             <form action="#" name="auth-form" method="GET" class="u-form">
                 <input type="email" name="user-email" placeholder="Your Email...">
@@ -104,5 +104,4 @@
     </div>
 </footer>
 </body>
-<!-- джуылкооооооооооооооооооооооооо -->
 </html>
