--- a/homework-6/index.html
+++ b/homework-6/index.html
@@ -37,7 +37,7 @@
             <section class="services">
               <div class="container">
                 <div class="box-title_1">
-                  <h1 class="title-1">SERVICES</h1>
+                  <h1 class="title-1">SERVICE</h1>
                   <p class="title-2">Proin iaculis purus consequat sem cure </p>
                 </div>
               
@@ -76,23 +76,28 @@
             </section>
         </main>
         <footer class="footer">
+          <div class="box-title_2">
+            <h1 class="title-3">CONTACT US</h1>
+            <p class="title-4">Proin iaculis purus consequat sem cure </p>
+          </div>
            <div class="container">
-              
-                   <form action="#" class="f-form">
+                  <div class="f-d">
+                    <form action="#" class="f-form">
                       <div class="i-c-1-2">
                         <div class="i-c-1">
-                          <Input class="i-1" type="text" placeholder="your name">
-                          <Input class="i-1" type="text" placeholder="your name">
-                          <Input class="i-1" type="text" placeholder="your name">
+                          <Input class="i-1" type="text" placeholder="your name *">
+                          <Input class="i-1" type="text" placeholder="your e-mail *">
+                          <Input class="i-1" type="text" placeholder="subject">
                         </div>
                         <div class="i-c-2">
-                          <textarea placeholder="massege" class="i-2" cols="30" rows="10"></textarea>
+                          <textarea placeholder="your massege *" class="i-2" cols="30" rows="10"></textarea>
                         </div>
                       </div>
                        <div class="i-c-3">
                          <input class="i-3" type="submit" value="send message">
                        </div>
                    </form>
+                  </div>
               </div>
         </footer>
 </body>
