--- a/homework-6/index.html
+++ b/homework-6/index.html
@@ -76,17 +76,18 @@
             </section>
         </main>
         <footer class="footer">
+                 <div class="container">
           <div class="box-title_2">
             <h1 class="title-3">CONTACT US</h1>
             <p class="title-4">Proin iaculis purus consequat sem cure </p>
           </div>
-           <div class="container">
+    
                   <div class="f-d">
                     <form action="#" class="f-form">
                       <div class="i-c-1-2">
                         <div class="i-c-1">
-                          <Input class="i-1" type="text" placeholder="your name *">
-                          <Input class="i-1" type="text" placeholder="your e-mail *">
+                          <Input class="i-1" type="text" required placeholder="your name *">
+                          <Input class="i-1" type="text"  required placeholder="your e-mail *">
                           <Input class="i-1" type="text" placeholder="subject">
                         </div>
                         <div class="i-c-2">
