--- a/homework-6/index.html
+++ b/homework-6/index.html
@@ -79,7 +79,7 @@
                  <div class="container">
           <div class="box-title_2">
             <h1 class="title-3">CONTACT US</h1>
-            <p class="title-4">Proin iaculis purus consequat sem cure </p>
+            <p class="title-4">Proin iaculis purus consequat sem cure. </p>
           </div>
     
                   <div class="f-d">
