--- a/html&css/homework-7/index.html
+++ b/html&css/homework-7/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width= , initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>project-7</title>
 </head>
 <body>
@@ -28,11 +28,9 @@
                 </nav>
             </div>
             <div class="titles_of_header_and_btn">
-                <!-- <div class="box-title"> -->
                 <p class="title_1_header">share your</p>
                 <h1 class="title_2_header">holiday dreams</h1>
                 <p class="title_3_header">And find the perfect partner to fullfill it</p>
-                <!-- </div> -->
                 <div class="div_btn">
                     <button class="btn_header">Find your holliday partner</button>
                 </div>
@@ -41,62 +39,66 @@
     </header>
     <main class="main">
         <div class="container">
-          <h2 class="m-title-1">Meet a partner for your best holiday</h2>
-          <div class="guys-s">
-    
-            <div class="p-1-box">
-              <div class="guy-i-box">
-                <img src="./images/p-img.png" alt="guy" class="guy-img">
-                <div class="guy-h-1">
-                             <div class="g-h-i-b-1">
-                 <img src="./images/tv.png" alt="tv" class="guy-hobby">
+            <h2 class="m-title-1">Meet a partner for your best holiday</h2>
+            <div class="guys-s">
+                <div class="p-1-box">
+                    <div class="guy-i-box">
+                        <img src="./images/p-img.png" alt="guy" class="guy-img">
+                        <div class="guy-h-1">
+                            <div class="g-h-i-b-1">
+                                <img src="./images/tv.png" alt="TV" class="guy-hobby">
+                            </div>
+                        </div>
+                    </div>
+                    <p class="guy-name">Bradley Hunter</p>
+                    <p class="guy-text">Based in Chicago. I love playing tennis and loud music.</p>
                 </div>
+                <div class="p-1-box">
+                    <div class="guy-i-box">
+                        <img src="./images/p-img2.png" alt="guy" class="guy-img">
+                        <div class="guy-h-1">
+                            <div class="g-h-i-b-2">
+                                <img src="./images/Shape 153.png" alt="Coffe" class="guy-hobby">
+                            </div>
+                        </div>
+                    </div>
+                    <p class="guy-name">Heather Walker</p>
+                    <p class="guy-text">I'm a happy person that loves cats and climbing on mountains.</p>
                 </div>
-              </div>
-              <p class="guy-name">Bredley Hunter</p>
-              <p class="guy-text">Based in Chicago. I love playing tennis and loud music.</p>
+                <div class="p-1-box">
+                    <div class="guy-i-box">
+                        <img src="./images/p-img3.png" alt="guy" class="guy-img">
+                        <div class="guy-h-1">
+                            <div class="g-h-i-b-3">
+                                <img src="./images/chemistry.png" alt="chemistry" class="guy-hobby">
+                            </div>
+                        </div>
+                    </div>
+                    <p class="guy-name">Lucas Marsha</p>
+                    <p class="guy-text">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+                </div>
+                <div class="p-1-box">
+                    <div class="guy-i-box">
+                        <img src="./images/p-img4.png" alt="guy" class="guy-img">
+                        <div class="guy-h-1">
+                            <div class="g-h-i-b-4">
+                                <img src="./images/tg.png" alt="tg" class="guy-hobby">
+
+</div>
+                        </div>
+                    </div>
+                    <p class="guy-name">Bradley Hunter</p>
+                    <p class="guy-text">Based in Chicago. I love playing tennis and loud music.</p>
+                </div>
             </div>
-            <div class="p-1-box">
-              <div class="guy-i-box">
-                <img src="./images/p-img2.png" alt="guy" class="guy-img">
-                <div class="guy-h-1">
-                  <div class="g-h-i-b-2">
-                    <img src="./images/Shape 153.png" alt="coffe" class="guy-hobby">
-                   </div>
-                </div>
-              </div>
-              <p class="guy-name">Bredley Hunter</p>
-              <p class="guy-text">Based in Chicago. I love playing tennis and loud music.</p>
-            </div>
-            <div class="p-1-box">
-              <div class="guy-i-box">
-                <img src="./images/p-img3.png" alt="guy" class="guy-img">
-                <div class="guy-h-1">
-                  <div class="g-h-i-b-3">
-                    <img src="./images/chemistry.png" alt="chemistry" class="guy-hobby">
-                   </div>
-                </div>
-              </div>
-              <p class="guy-name">Bredley Hunter</p>
-              <p class="guy-text">Based in Chicago. I love playing tennis and loud music.</p>
-            </div>
-            <div class="p-1-box">
-              <div class="guy-i-box">
-                <img src="./images/p-img4.png" alt="guy" class="guy-img">
-                <div class="guy-h-1">
-                  <div class="g-h-i-b-4">
-                    <img src="./images/tg.png" alt="tg" class="guy-hobby">
-                   </div>
-                </div>
-              </div>
-              <p class="guy-name">Bredley Hunter</p>
-              <p class="guy-text">Based in Chicago. I love playing tennis and loud music.</p>
-            </div>
-          </div>
         </div>
-      </main>
-      <footer class="footer">
-        <button class="f-button"> see onather partners</button>
-      </footer>
-    </body>
-    </html>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="btn_footer">
+                <button class="f-button">See other partners</button>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
