--- a/html&css/homework-7/index.html
+++ b/html&css/homework-7/index.html
@@ -12,7 +12,7 @@
             <div class="container-menu">
                 <nav class="navigation">
                     <div class="logo-box">
-                        <h1 href="#" class="logo">URLAUBSGLÜCK</h1>
+                        <h2 class="logo">URLAUBSGLÜCK</h2>
                     </div>
                     <ul class="menu">
                         <li class="menu-item">
@@ -22,7 +22,6 @@
                             <div class="cheat">
                                 <a href="#" class="menu-item__link">Sign in</a>
                             </div>
-                        </li>
                         </li>
                     </ul>
                 </nav>
@@ -58,7 +57,7 @@
                         <img src="./images/p-img2.png" alt="guy" class="guy-img">
                         <div class="guy-h-1">
                             <div class="g-h-i-b-2">
-                                <img src="./images/Shape 153.png" alt="Coffe" class="guy-hobby">
+                                <img src="./images/Shape-153.png" alt="Coffe" class="guy-hobby">
                             </div>
                         </div>
                     </div>
