--- a/html&css/homework-7/index.html
+++ b/html&css/homework-7/index.html
@@ -27,8 +27,7 @@
                 </nav>
             </div>
             <div class="titles_of_header_and_btn">
-                <p class="title_1_header">share your</p>
-                <h1 class="title_2_header">holiday dreams</h1>
+           <h2 class="title-header">share your<br>holiday dreams</h2>
                 <p class="title_3_header">And find the perfect partner to fullfill it</p>
                 <div class="div_btn">
                     <button class="btn_header">Find your holliday partner</button>
