--- a/modue-js-1/дз-js-5/index.html
+++ b/modue-js-1/дз-js-5/index.html
@@ -9,7 +9,8 @@
 <body>
     <heade>
         <h1 style="text-align: center;">good work )</h1>
-    </heade
+    </heade>
     <script src="./js/app.js"></script>
+    
 </body>
 </html>
